<resources>
    <string name="app_name">Green hat</string>
    <string name="hint_password">Código de Seguridad</string>
    <string name="login_text_button">Login</string>
    <string name="error_required_field">Es requerido un password</string>
    <string name="error_wrong_length">El código de seguridad es de solo 4 dígitos</string>
    <string name="valid_password">2222</string>
    <string name="text_button_book">Libro</string>
    <string name="editadas">editadas</string>
    <string name="paginas_editadas">Ver Paginas Editadas</string>
    <string name="ok">ok</string>
    <string name="cancel">cancelar</string>
    <string name="title">title</string>
    <string name="message">message</string>
    <string name="title_color_picker">Selecciona tu color favorito</string>
    <string name="ingresa_texto">Ingreso de Texto</string>
    <string name="texto_etiqueta">Texto de la Etiqueta</string>
</resources>
