<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:minWidth="700dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/activatedLoginButton"
        android:id="@+id/textView7" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/activatedLoginButton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="9dp"
        android:text="@string/message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:ems="10"
        android:id="@+id/messageDialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button"
            android:layout_marginRight="2dp"
            android:textColor="@color/activatedLoginButton"
            android:id="@+id/cancelForgot"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:background="@drawable/transparent_button"
            android:textColor="@color/activatedLoginButton"
            android:id="@+id/okForgot"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>