<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    android:minWidth="700dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/activatedLoginButton"
        android:id="@+id/textTitleColorPicker" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/activatedLoginButton"/>

    <com.larswerkman.lobsterpicker.LobsterPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_gravity="center"
        app:color_history_enabled="true"
        android:id="@+id/colorPicker" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/activatedLoginButton"
            android:textAllCaps="true"
            android:id="@+id/cancelButton"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/transparent_button"
            android:textColor="@color/activatedLoginButton"
            android:textAllCaps="true"
            android:id="@+id/okButton"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>